# ckanext-canada

./: .gitignore  README.md  ckan.ini  devenv.nix  devenv.yaml
ckanext/canada/: helpers.py
ckanext/canada/plugin/: public_plugin.py
docker/ckan/: .env.base  .env.example  Dockerfile  README.md  ckanext-canada-base-conf.ini  ckanext-canada.base.ini  ckanext-canada.public.ini  ckanext-canada.registry.ini
docker/ckan/docker-entrypoint.d/: 00_apply_pending_migrations.sh  00_setup_validation_db.sh  01_setup_datapusher.sh  02_setup_xloader.sh  03_setup_ca.sh  03_setup_validation_db.sh  04_rebuild_search_schema.sh  05_init_recombinant.sh  06_run_localization.sh  07_security_migrate.sh  08_apply_pending_migrations.sh
docker/ckan/setup.override/: prerun.py.override  start_ckan.sh.override  start_ckan_dev.sh.override
docker/solr/: Dockerfile
src/ckanext-canadian-theme/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
src/ckanext-canadian-theme/.github/workflows/: test.yml
src/ckanext-canadian-theme/ckanext/canadian_theme/: helpers.py  plugin.py
src/ckanext-canadian-theme/ckanext/canadian_theme/assets/: script.js  webassets.yml
src/ckanext-canadian-theme/ckanext/canadian_theme/plugin/: plugin.py
src/ckanext-canadian-theme/ckanext/canadian_theme/tests/: test_plugin.py
